--- a/DAY1/index.html
+++ b/DAY1/index.html
@@ -7,7 +7,99 @@
 </head>
 <body>
    
-
+   <table border=2  "border: 2px solid black;">
+    <tr><th colspan="11">TIMETABLE</th></tr>
+    <tr>
+        <th rowspan="2" >Day/Time</th>
+        <th >1</th>
+        <th >2</th>
+        <th ></th>
+        <th >3</th>
+        <th >4</th>
+        <th >5</th>
+        <th ></th>
+        <th >6</th>
+        <th >7</th>
+        <th >8</th>
+    </tr>
+    <tr>
+        <td>8:50 -9:40</td>
+        <td>9:40-10:30</td>
+        <td>10:30 -10:40</td>
+        <td>10:40-11:30</td>
+        <td>11:30-12:20</td>
+        <td>12:20-1:10</td>
+        <td>1:10-2:00</td>
+        <td>2:00- 2:50</td>
+        <td>2:50- 3:40</td>
+        <td>3:40- 4:30</td>
+    </tr>
+    <tr>
+        <td>Monday</td>
+        <td>sub1</td>
+        <td>sub2</td>
+        <td>break</td>
+        <td>sub3</td>
+        <td>FSD</td>
+        <td>FSD</td>
+        <td>LUNCH BREAK</td>
+        <td>sub4</td>
+        <td>sub5</td>
+        <td>DSA</td>
+    </tr>
+    <tr>
+        <td>Tuesday</td>
+        <td>sub1</td>
+        <td>sub2</td>
+        <td>break</td>
+        <td>sub3</td>
+        <td>FSD</td>
+        <td>FSD</td>
+        <td>LUNCH BREAK</td>
+        <td>sub4</td>
+        <td>sub5</td>
+        <td>DSA</td>
+    </tr>
+    <tr>
+        <td> Wednesday</td>
+        <td>sub1</td>
+        <td>sub2</td>
+        <td>break</td>
+        <td>sub3</td>
+        <td>FSD</td>
+        <td>FSD</td>
+        <td>LUNCH BREAK</td>
+        <td>sub4</td>
+        <td>sub5</td>
+        <td>DSA</td>
+    </tr>
+    <tr>
+        <td>Thursday</td>
+        <td>sub1</td>
+        <td>sub2</td>
+        <td>break</td>
+        <td>sub3</td>
+        <td>FSD</td>
+        <td>FSD</td>
+        <td>LUNCH BREAK</td>
+        <td>sub4</td>
+        <td>sub5</td>
+        <td>DSA</td>
+    </tr>
+    <tr>
+        <td>Friday</td>
+        <td>sub1</td>
+        <td>sub2</td>
+        <td>break</td>
+        <td>sub3</td>
+        <td>FSD</td>
+        <td>FSD</td>
+        <td>LUNCH BREAK</td>
+        <td>sub4</td>
+        <td>sub5</td>
+        <td>DSA</td>
+    </tr>
+   </table>
       
 </body>
 </html>
