--- a/DAY1/index.html
+++ b/DAY1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    
-   <table border=2  "border: 2px solid black;">
+   <table border=2 style="border: 2px solid black;"  >
     <tr><th colspan="11">TIMETABLE</th></tr>
     <tr>
         <th rowspan="2" >Day/Time</th>
@@ -38,11 +38,11 @@
         <td>Monday</td>
         <td>sub1</td>
         <td>sub2</td>
-        <td>break</td>
-        <td>sub3</td>
+        <td rowspan="5">BREAK</td>
+        <td >sub3</td>
+        <td >FSD</td>
         <td>FSD</td>
-        <td>FSD</td>
-        <td>LUNCH BREAK</td>
+        <td rowspan="5">LUNCH </td>
         <td>sub4</td>
         <td>sub5</td>
         <td>DSA</td>
@@ -51,11 +51,9 @@
         <td>Tuesday</td>
         <td>sub1</td>
         <td>sub2</td>
-        <td>break</td>
         <td>sub3</td>
         <td>FSD</td>
         <td>FSD</td>
-        <td>LUNCH BREAK</td>
         <td>sub4</td>
         <td>sub5</td>
         <td>DSA</td>
@@ -64,11 +62,9 @@
         <td> Wednesday</td>
         <td>sub1</td>
         <td>sub2</td>
-        <td>break</td>
         <td>sub3</td>
         <td>FSD</td>
         <td>FSD</td>
-        <td>LUNCH BREAK</td>
         <td>sub4</td>
         <td>sub5</td>
         <td>DSA</td>
@@ -77,11 +73,10 @@
         <td>Thursday</td>
         <td>sub1</td>
         <td>sub2</td>
-        <td>break</td>
         <td>sub3</td>
         <td>FSD</td>
         <td>FSD</td>
-        <td>LUNCH BREAK</td>
+       
         <td>sub4</td>
         <td>sub5</td>
         <td>DSA</td>
@@ -90,11 +85,9 @@
         <td>Friday</td>
         <td>sub1</td>
         <td>sub2</td>
-        <td>break</td>
         <td>sub3</td>
         <td>FSD</td>
         <td>FSD</td>
-        <td>LUNCH BREAK</td>
         <td>sub4</td>
         <td>sub5</td>
         <td>DSA</td>
