--- a/DAY4/flexwork/index.html
+++ b/DAY4/flexwork/index.html
@@ -17,8 +17,8 @@
             </div>
          </div>
          <div class="box">
-            <div class="part">1</div>
-            <div class="part">2</div>
+            <div class="part">  <img  src="../cake pic.jpeg" alt=""></div>
+            <div class="part">  <img  src="../cake pic.jpeg" alt=""></div>
          </div>
          <div class="box">
             <div class="part">
@@ -29,8 +29,8 @@
             </div>
          </div>
          <div class="box">
-            <div class="part">1</div>
-            <div class="part">2</div>
+            <div class="part">  <img  src="../cake pic.jpeg" alt=""></div>
+            <div class="part">  <img  src="../cake pic.jpeg" alt=""></div>
          </div>
         
         
